# ShapeWars

./: .gitignore  CMakeLists.txt  Shapes.c
include/: cells.h  collision.h  drawing.h  helpers.h  levels.h  structs.h
src/: cells.c  drawing.c  levels.c  main.c  structs.c
tests/: collision_test.cpp
